Update tests to execute on older JRE versions